Correct request parameter API validation.
