# service/src/main/java/dk/kvalitetsit/hello/controller/HelloController.java
@@ -5,12 +5,15 @@ import dk.kvalitetsit.hello.service.HelloService;
 import dk.kvalitetsit.hello.service.model.HelloServiceInput;
 import org.openapitools.api.KithugsApi;
 import org.openapitools.model.DetailedError;
+import org.openapitools.model.HelloRequest;
 import org.openapitools.model.HelloResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.RestController;
+
+import java.util.UUID;
 
 @RestController
 // CORS - Consider if this is needed in your application. Only here to make Swagger UI work.
@@ -32,6 +35,10 @@ public class HelloController implements KithugsApi {
             throw new BadRequestException(DetailedError.DetailedErrorCodeEnum._10, "%s is not a valid name.".formatted(name));
         }
 
+        if(name.equalsIgnoreCase("ERROR")) {
+            return ResponseEntity.ok(new HelloResponse().name(UUID.randomUUID().toString()));
+        }
+
         var serviceInput = new HelloServiceInput(name);
 
         var serviceResponse = helloService.helloServiceBusinessLogic(serviceInput);
@@ -41,5 +48,10 @@ public class HelloController implements KithugsApi {
         helloResponse.setNow(serviceResponse.now().toOffsetDateTime());
 
         return ResponseEntity.ok(helloResponse);
+    }
+
+    @Override
+    public ResponseEntity<HelloResponse> v1HelloPost(HelloRequest request) {
+        throw new RuntimeException("Not implemented.");
     }
 }
